[package]
authors = ["ZondaX GmbH <info@zondax.ch>"]
categories = ["authentication", "cryptography"]
description = "Library to integrate with the Ledger Cosmos app"
edition = "2018"
homepage = "https://github.com/ZondaX/ledger-tendermint-rs"
keywords = ["ledger", "nano", "apdu", "cosmos"]
license = "Apache-2.0"
name = "ledger-cosmos"
readme = "README.md"
repository = "https://github.com/ZondaX/ledger-tendermint-rs"
version = "0.4.0"

[lib]
name = "ledger_cosmos"

[dependencies]
byteorder = "1.3.1"
lazy_static = "1.2.0"
ledger = "0.2.5"
matches = "0.1.8"
quick-error = "2.0.1"
signatory = {version = "0.27.1", features = ["ed25519"]}

[dev-dependencies]
criterion = "0.5.1"
ed25519-dalek = "2.1.1"
sha2 = "0.10.8"
